<resources>
    <string name="action_check_fromWeb">See Details on KT C/S…</string>
    <string name="action_first_page">Home</string>
    <string name="action_launch_ktcare_app">KT Customer Service</string>
    <string name="action_launch_web_cm">Router\'s page (Korean)</string>
    <string name="action_login">Authenticate on Egg</string>
    <string name="action_overflow">More</string>
    <string name="action_power_option">Power Options</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Preferences</string>
    <string name="action_shutdown">Turn off</string>
    <string name="action_sleep">Sleep</string>
    <string name="action_wifi">Wi-Fi Settings</string>
    <string name="action_update">Latest Firmware Page (Korean)</string>
    <string name="action_app_install_neccessary">(Install first)</string>
    <string name="action_app_ktcare">KT C/S App(Korean)</string>
    <string name="action_app_ktcaremini">KT C/S Mini(Korean)</string>
    <string name="action_app_browser">Web Browser</string>
    <string name="app_desc">Companion for Strong Egg1 and Compact Egg1-!</string>
    <string name="app_loading">Loading…</string>
    <string name="app_name">SC Egg1 Status</string>
    <string name="app_pref_AutoRefresh">Always put an icon on noti bar</string>
    <string name="app_pref_MiniAutoRefresh">Put only signal bar on noti bar</string>
    <string name="app_pref_DarkIcon">Darker icons for noti bar</string>
    <string name="app_pref_HttpClient">Alternative Connections</string>
    <string name="app_pref_pollingRate">Choose how frequent auto refresh will happen below</string>
    <string name="app_pref_millisec">millisec(s)</string>
    <string name="app_pref_err_outofbounds">Please specify 500 to 15000 millisec (0.5 to 15 sec.) reverting back to default, 5 sec.</string>
    <string name="app_pref_notice">Tap OK to apply changes.</string>
    <string name="app_service_connected">Tap to view detailed measures, or turn off this.</string>
    <string name="app_service_name">SC Egg1 Notification Service</string>
    <string name="app_service_started">Retrieving from Egg…</string>
    <string name="app_service_turnoff">Toggle Notification Icon</string>
    <string name="app_service_turnon">Toggle Notification Icon</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_bottomup">Very low</string>
    <string name="battery_enough">Plenty</string>
    <string name="battery_fine">Fair</string>
    <string name="battery_insufficient">Low</string>
    <string name="battery_unknown">Unknown</string>
    <string name="error_login_failed">Failed to authenticate. Try again.</string>
    <string name="error_nna_disposed">Everything is okay. You may not need to see this.</string>
    <string name="error_nna_loginfailed_desc">Check your AP name on black bar above, Tap authenticate button on top-right corner.\nTo connect another Wi-Fi, tap picture on center.</string>
    <string name="error_nna_loginfailed_title">Authentication Failed</string>
    <string name="error_nna_nowifiavailable_desc">Open Wi-Fi Settings by tapping picture on center, Turn on Wi-Fi. Then connect to your Egg\'s AP name.</string>
    <string name="error_nna_nowifiavailable_ssid">Connect to a Wi-Fi first</string>
    <string name="error_nna_nowifiavailable_title">Please turn on Wi-Fi</string>
    <string name="error_nna_pleasewait_desc">This can take a seconds. Next time this will be shorter, remembering last connected Egg.</string>
    <string name="error_nna_pleasewait_ssid">Please wait…</string>
    <string name="error_nna_pleasewait_title">Recognizing Wi-Fi…</string>
    <string name="error_nna_unrecognized_desc">Open Wi-Fi Settings by tapping picture on center, then connect to your Egg\'s AP name.\n This app supports no other than Strong Egg1(KWD-B2600) and Compact Egg1(KWF-B2700).</string>
    <string name="error_nna_unrecognized_title">This AP is not supported</string>
    <string name="error_nna_unsupported_desc">You can update your Egg\'s firmware by opening Router\'s page (Korean), Traverse and tap \'자동업데이트\';means auto-update. Tap picture on center to start. Or, visit for the latest firmware by tapping upper right \'latest firmware page\' button, then follow the instruction written (Korean). Sorry for Inconvinience.</string>
    <string name="error_nna_unsupported_title">Firmware not recognizable</string>
    <string name="error_wifi_setting_not_exists">Couldn\'t open Wi-Fi Settings. We\'re sorry, visit there yourself.</string>
    <string name="error_action_launch_app_failed">Couldn\'t open an app.</string>
    <string name="item_header_bills_additionalcharge">Additional Charges:\u0020</string>
    <string name="item_header_bills_basic">Basic fee:\u0020</string>
    <string name="item_header_bills_today">Fee till today:\u0020</string>
    <string name="item_header_dns">DNS:\u0020</string>
    <string name="item_header_download">Received:\u0020</string>
    <string name="item_header_gateway">Gateway:\u0020</string>
    <string name="item_header_packets_provided">Provided:\u0020</string>
    <string name="item_header_packets_remaining">Remaining:\u0020</string>
    <string name="item_header_packets_exceeded">Exceeded:\u0020</string>
    <string name="item_header_packets_used">Used:\u0020</string>
    <string name="item_header_plan">Your plan:\u0020</string>
    <string name="item_header_upload">Sent:\u0020</string>
    <string name="item_header_bssid">AP fingerprint:\u0020</string>
    <string name="item_header_phone_ip">Your IP under Router:\u0020</string>
    <string name="item_header_recentobatined">Last Retrieved:\u0020</string>
    <string name="item_postfix_elapsed">\u0020Connected</string>
    <string name="item_title_battery">Battery:\u0020</string>
    <string name="item_title_ipv4">IP:\u0020</string>
    <string name="item_title_signalsimple">Reception:\u0020</string>
    <string name="item_title_used_packets">Used on this time:\u0020</string>
    <string name="noti_login_renewed">Trying to Authenticate…</string>
    <string name="pref_login_desc">Enter proper authentication details.\nThese are essential to this app to work.</string>
    <string name="pref_password_hint">0000 ←PW(factory\'s)</string>
    <string name="pref_username_hint">user ←ID(factory\'s)</string>
    <string name="init_pleasewait">Please Wait…</string>
    <string name="section_header_Egg">Egg Status</string>
    <string name="section_header_Wibro">Wibro Status</string>
    <string name="item_header_wibrostatus">Wibro:\u0020</string>
    <string name="wb_signal_lost">No signal</string>
    <string name="wb_signal_weak">Very Poor</string>
    <string name="wb_signal_less_weak">Poor</string>
    <string name="wb_signal_normal">Fair</string>
    <string name="wb_signal_less_strong">Good</string>
    <string name="wb_signal_strong">Strong</string>
    <string name="wb_signal_very_strong">Excellent</string>
    <string name="wb_signal_unknown">Unknown</string>
    <string name="wb_status_completed">Connected</string>
    <string name="wb_status_connecting">Connecting</string>
    <string name="wb_status_waiting">Scanning</string>
    <string name="wb_status_initializing">Initializing</string>
    <string name="wb_status_outofrange">Out of service area</string>
    <string name="wb_status_unknown">Unknown</string>
    <string name="wb_status_notconnected">Not connected</string>
    <string name="tab_settings">Preferences</string>
    <string name="tab_summary">Summary</string>
    <string name="tab_usage">Usage</string>
    <string name="unit_krw">\u0020KRW</string>
    <string name="item_header_cinr_and_rssi">CINR(dB)/RSSI(-dBm):\u0020</string>
    <string name="section_header_usage">Metered Wibro (Not Yet retrieved)</string>
    <string name="section_header_usage_with_date">Metered Wibro (as of %s)</string>
	<string name="not_yet_refreshed">Not yet Retrieved</string>
	<string name="operation_not_supported_on_this_device">Not supported on this device.</string>
	<string name="error_usage_cannot_retrieve">Failed to retrieve from KT.</string>
	<string name="guide_plan_info">See more details on KT Customer Service(Korean)</string>
	<string name="guide_power_option">Tap Power Options on top-right corner.</string>
	<string name="guide_mini_refresh">Only showing signal bar. Tap and change preference to show more.</string>
	
	<string name="item_header_less_than">less than %s</string>
	<string name="item_header_more_than">more than %s</string>
	<!-- 
	<string name="action_check_Now">사용량 정보 새로고침</string>
    <string name="browse_dhcp_allocation_table">DHCP 할당 목록 (웹)</string>
    <string name="browse_dns_advanced_settings">DHCP 고급 설정 (웹)</string>
    <string name="browse_firmware_page">웹CM에서 업데이트 (웹)</string>
    <string name="browse_list_of_connected">무선 네트워크 목록 확인 (웹)</string>
    <string name="browse_manufacturer_homepage">제조사 홈페이지 (웹)</string>
    <string name="browse_port_filtering_table">MAC/IP/포트 필터링 규칙 (웹)</string>
    <string name="browse_port_forwarding_table">포트포워딩 규칙 (웹)</string>
    <string name="dhcp_allocatable_range">시작IP주소/종료IP주소/서브넷</string>
    <string name="dhcp_maximum_allocated">최대 접속자수</string>
    <string name="dhcp_primary_dns">기본 DNS 주소</string>
    <string name="dhcp_secondary_dns">보조 DNS 주소</string>
    <string name="dhcp_use_dns_proxy">DNS프록시 사용</string>
    <string name="item_header_channel">채널:\u0020</string>
    <string name="item_header_apname">채널:\u0020</string>
    <string name="pref_new_eggip">에그 IP 지정</string>
    <string name="pref_password">비밀번호</string>
    <string name="pref_password_again">비밀번호 (확인)</string>
    <string name="pref_username">계정 이름</string>
    <string name="router_allow_remote_manage">외부에서 에그 관리 허용</string>
    <string name="router_allow_remote_ping">외부 핑 허용</string>
    <string name="router_allow_vpn">VPN Pass-through 허용</string>
    <string name="router_dmz_ip">DMZ IP입력</string>
    <string name="router_use_dmz">DMZ사용</string>
    <string name="system_auto_power_off">자동종료 설정</string>
    <string name="system_auto_wifi_off_wait_until">권외종료 시간 설정</string>
    <string name="system_do_factory_reset">공장초기화</string>
    <string name="system_use_auto_wifi_off">권외 종료 사용</string>
    <string name="system_use_tcp_optimize">TCP 최적화 사용</string>
    <string name="wifi_auth_key">인증키 입력</string>
    <string name="wifi_channel">채널</string>
    <string name="wifi_mac_addr">MAC주소</string>
    <string name="wifi_new_ssid">새 AP이름 입력</string>
    <string name="wifi_select_80211_mode">네트워크 모드(bg,b,g,bgn)</string>
    <string name="wifi_select_authenticators">인증 방식 선택</string>
    <string name="wifi_select_encryption_method">암호화 방식 선택</string>
    <string name="wifi_use_ch13_while_auto">채널 13 사용</string>
    <string name="wifi_ssid_hidden">숨김</string>
	<string name="wifi_ssid_visible">보임</string>
	 -->
</resources>
