<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
 <!-- android:theme="@style/Dialog" -->

    <LinearLayout
        style="@style/PageRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/dialog_elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_login_desc" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/entire_minimum_size"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:hint="@string/pref_username_hint"
            android:imeOptions="actionNext"
            android:maxLength="12"
            android:paddingBottom="@dimen/padding_inside_elements"
            android:paddingTop="@dimen/padding_inside_elements"
            android:typeface="monospace" />
        <!--
            <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:text="@string/pref_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFFFF" />
        -->

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/entire_minimum_size"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:hint="@string/pref_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingBottom="@dimen/padding_inside_elements"
            android:paddingTop="@dimen/padding_inside_elements"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>